--- a/攻击事件.md
+++ b/攻击事件.md
@@ -1,3 +1,4 @@
 # 攻击事件汇总
 
-1. http://www.8btc.com/bter49 - 惊魂49小时-比特儿NXT失窃事件全程回放
+2017年07月19日 parity钱包被黑事件 https://zhuanlan.zhihu.com/p/28346439  
+2014年08月15日 比特儿NXT失窃事件 http://www.8btc.com/bter49
