--- a/攻击事件.md
+++ b/攻击事件.md
@@ -4,5 +4,5 @@
 |时间          |事件             |相关链接                                |          
 |--------------|----------------|---------------------------------------|
 |2018 Apr 26 |SMT被攻击事件 | https://zhuanlan.zhihu.com/p/36116810 |
-|2017 Jul 19 |parity钱包被黑事件| https://zhuanlan.zhihu.com/p/28346439
+|2017 Jul 19 |Parity MultiSig钱包事件| https://zhuanlan.zhihu.com/p/28346439
 |2014 Aug 15 |比特儿NXT失窃事件 |http://www.8btc.com/bter49 |
