--- a/攻击事件.md
+++ b/攻击事件.md
@@ -3,6 +3,7 @@
 Date | Event | Type
 :-|:-|:-
 2018-04-26 |[SMT被攻击事件](https://zhuanlan.zhihu.com/p/36116810) |SafeMath
+2018-04-22 |[美链BEC漏洞事件](https://learnblockchain.cn/2018/04/25/bec-overflow/) |SafeMath
 2017-07-19 |[Parity MultiSig钱包事件](https://zhuanlan.zhihu.com/p/28346439) |Condition
 2014-08-15 |[比特儿NXT失窃事件](http://www.8btc.com/bter49) | N/A
 
