Update and rename 攻击事件.md to 漏洞事件.md

--- a/漏洞事件.md
+++ b/漏洞事件.md
@@ -10,3 +10,14 @@ Date | Event | Type
 2017-07-19 |[Parity MultiSig钱包事件](https://zhuanlan.zhihu.com/p/28346439) |Condition
 2014-08-15 |[比特儿NXT失窃事件](http://www.8btc.com/bter49) | N/A
 
+  
+    
+    
+### Type汇总：
+
+- underSell: 高卖低首
+- ownerUnderflow: 下溢增持
+- mintAny: 随意铸币
+- OverMint: 超额铸币
+- allocateAny: 超额定向分配
+- overBuy: 超额购币
